# bg_autopilot

./: README.md
android_bg_ap/: .gitignore  settings.gradle.kts
android_bg_ap/app/: build.gradle.kts  proguard-rules.pro
android_bg_ap/app/src/main/: AndroidManifest.xml
esp32/: .gitignore  .gitmodules  CMakeLists.txt  LOGS  README.md  sdkconfig  sdkconfig.defaults
esp32/components/NMEA2000/src/: N2kMessages.cpp  N2kMessages.h
esp32/main/: CMakeLists.txt  Kconfig.projbuild  autopilot.c  autopilot.h  ble_ap.c  ble_ap.h  ble_joystick.c  ble_joystick.h  fake_ap.c  fake_ap.h  led_status.c  led_status.h  led_strip_encoder.c  led_strip_encoder.h  main.c  n2k_log.c  n2k_log.h  nmea2000.cpp  nmea2000.h  serial_cmd.c  serial_cmd.h
pinetime_bg_ap/: WIP  build.sh  flash_ota.sh  flash_swd.sh  integrate.py  openocd_pinetime.cfg  ota_dfu.py  pine.xcf  setup.sh
pinetime_bg_ap/infinitime/src/: CMakeLists.txt  FreeRTOSConfig.h
pinetime_bg_ap/infinitime/src/components/ble/: NimbleController.cpp  NimbleController.h
pinetime_bg_ap/infinitime/src/displayapp/: Controllers.h  DisplayApp.cpp  DisplayApp.h  DisplayAppRecovery.cpp  DisplayAppRecovery.h  UserApps.h
pinetime_bg_ap/infinitime/src/systemtask/: SystemTask.cpp
pinetime_bg_ap/src/: BgApApp.cpp  BleApClient.cpp  BleApClient.h
wearos_bg_ap/: .gitignore  CLAUDE.md  README.md  gradle.properties  local.properties  settings.gradle.kts
wearos_bg_ap/app/: build.gradle.kts  proguard-rules.pro
wearos_bg_ap/app/src/main/: AndroidManifest.xml
wearos_bg_ap/gradle/: libs.versions.toml
(+23 files in other folders)
